welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: value unary_! is not a member of Unit
  while(!posFinale()){serpent()}
        ^SnakeBuggle:21: warning: enclosing method posFinale has result type Unit: return value discarded
  return(x)
  ^